--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   kakao_flutter_sdk: ^1.9.1+2
   table_calendar: ^3.1.1
+  webview_flutter: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ dev_dependencies:
   riverpod_lint: ^2.3.7
   flutter_launcher_icons: "^0.13.1"
   riverpod_generator: ^2.4.0
+  custom_lint: ^0.6.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
