--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   kakao_flutter_sdk: ^1.9.1+2
   table_calendar: ^3.1.1
   webview_flutter: ^4.9.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
